--- a/angelconsulting/doctor/static/css/styles.css
+++ b/angelconsulting/doctor/static/css/styles.css
@@ -2,6 +2,10 @@
 
 /*############ HEADER ##############*/
 
+body{
+  background-color: #ececec;
+}
+
 .header {
   background: linear-gradient(
    rgba(134, 192, 250, 0.5),
@@ -352,4 +356,63 @@ img.img-fluid{
   margin-top: 316px;
   margin-left: 0;
   border-radius: 50%;
+}
+
+/*Services*/
+div.card {
+  background-color: white;
+  padding: 20px;  
+  text-align: center;
+  height: 100%; 
+  box-shadow: 0 10px 12px rgba(0, 0, 0, 0.5);
+  transition: .3s;
+}
+
+div.card:hover{
+  box-shadow: 0 1rem 3rem rgba(31, 45, 61, 0.644) !important;
+  transform: translate(0, -5px);
+  border-radius: 7px;
+}
+
+img.card-img-top{
+  width:50%;
+  align-self: center;
+}
+
+/* Testimonials */
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.item .img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 8px solid #ffffff;
+  overflow: hidden;
+}
+
+.item .img-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.item .overview {
+  margin-top: 10px;
+}
+
+p.overview{
+  font-weight: bold;
+}
+
+.item .testimonial{
+  margin-top: 0.7rem;
+  padding: 0 100px;
 }
