--- a/angelconsulting/doctor/templates/base.html
+++ b/angelconsulting/doctor/templates/base.html
@@ -1,92 +1,82 @@
- {% load static %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-    <title>{{title}}</title>    
+<head>
+    <title>{{ title }}</title>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 
-    </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+</head>
 
-    <style>
-    {% block style %}{% endblock style %}
-    </style>
+<body>
+    <div class="header"
+        {% if "cita" in request.path %}
+            style="max-height: 300px !important; min-height: 300px !important;"
+        {% endif %}
+    >
 
-    <div class="header" style="
-    {% if "cita" in request.path %}
-    max-height:300px!important;
-    min-height:300px!important;
-    {% endif %}
-    ">
+        <nav class="navbar navbar-light navbar-expand-md">
+            <div class="container">
+                <div class="logo-container" onclick="window.location.href = '{% url 'index' %}'">
+                    <img class="logo" src="{% static 'img/logo.png' %}">
+                    <a class="navbar-brand">Dr. Angel Villegas</a>
+                </div>
 
-    <nav class ="navbar navbar-light navbar-expand-md">
-        
-        <div class="container">
-            
-            <div class="logo-container" onclick="window.location.href = '{% url 'index' %}'">
-                <img class="logo" src="{% static 'img/logo.png' %}">
-                <a class="navbar-brand">Dr. Angel Villegas</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                    <ul class="nav navbar-nav ms-auto text-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#informacion">NOSOTROS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#servicios">SERVICIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#reviews">TESTIMONIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="agendar-cita" class="nav-link active" href="#contact">¡Agenda una Cita!</a>
+                        </li>
+
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">X</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
+        </nav>
 
-            <button 
-                class = "navbar-toggler"
-                type = "button"
-                data-bs-toggle="collapse"
-                data-bs-target="#toggleMobileMenu"
-                aria-controls ="toggleMobileMenu"
-                aria-expanded="False"
-                data-toggle="collapse" 
-                aria-table="Toggle navigation"
-             >
-
-             <span class ="navbar-toggler-icon"></span>
-            </button>
-
-
-            <div class="collapse navbar-collapse" id = "toggleMobileMenu">
-                <ul class="nav navbar-nav ms-auto text-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#informacion">NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#servicios">SERVICIOS</a>
-                    </li>                    
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#reviews">TESTIMONIOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="agendar-cita" class="nav-link active" href="#contact">¡Agenda una Cita!</a>
-                    </li>
-
-                    {% if request.user.is_authenticated %}
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#">X</a>
-                  </li>
-                  {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-        
-    {% block cta %}{% endblock cta %}
+        {% block cta %}{% endblock cta %}
     </div>
 
     {% block content %}{% endblock content %}
 
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    
-   <script>
-      {% block script %}{% endblock script %}
-   </script>
-  </body>
-  
-  </html>
+
+    <script>
+        {% block script %}{% endblock script %}
+    </script>
+</body>
+
+</html>
