--- a/angelconsulting/doctor/templates/index.html
+++ b/angelconsulting/doctor/templates/index.html
@@ -51,91 +51,97 @@
 <section id="servicios">
   <div class="bg-primary text-center py-5 mb-4">
       <div class="container">
-        <h1 class="fw-light text-white">Servicios</h1>
-        <p class="overview">We provide compassionate and expert care to our community. You are at the center of everything we do. Let us be your healthcare partner.</p>
+        <h1 class="fw-light text-white">Mis Servicios</h1>
+       <!-- <p class="overview">We provide compassionate and expert care to our community. You are at the center of everything we do. Let us be your healthcare partner.</p> -->
+
       </div>
     </div>
   <div class="container">
     <div class="row">
+
       <!-- Team Member 1 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="{% static 'img/service1.jpg' %}" class="card-img-top" alt="...">
+          <img src="{% static 'img/general.svg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Primary Care</h5>
-            <div class="card-text text-black-50">Your personalized medical professionals.</div>
+            <h5 class="card-title mb-0">Cuidado General</h5>
+            <div class="card-text">Your personalized medical professionals.</div>
           </div>
         </div>
       </div>
+    
       <!-- Team Member 2 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="{% static 'img/service2.jpg' %}" class="card-img-top" alt="...">
+          <img src="{% static 'img/consulta.svg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Dermatology</h5>
-            <div class="card-text text-black-50">Your skin care made easy.</div>
+            <h5 class="card-title mb-0">Consulta Virtual</h5>
+            <div class="card-text">Your skin care made easy.</div>
           </div>
         </div>
       </div>
+    
       <!-- Team Member 3 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="{% static 'img/service3.jpg' %}" class="card-img-top" alt="...">
+          <img src="{% static 'img/emergency.svg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <h5 class="card-title mb-0">Cuidado de Emergencia</h5>
+            <div class="card-text">Web Developer</div>
           </div>
         </div>
       </div>
+    
       <!-- Team Member 4 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="{% static 'img/service4.jpg' %}" class="card-img-top" alt="...">
+          <img src="{% static 'img/recetario.svg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">PrEP Therapy</h5>
-            <div class="card-text text-black-50">Stay safe if you are at high exposure of HIV.</div>
+            <h5 class="card-title mb-0">Recetario</h5>
+            <div class="card-text">Stay safe if you are at high exposure to HIV.</div>
           </div>
         </div>
       </div>
     </div>
     <!-- /.row -->
-  
-  </div>
 </section>
 
-<section class="text-center conatiner" style="margin-block:200px;" id="reviews">
-    <h2>Satisfied Patients</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Carousel indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>   
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">		
-            <div class="carousel-item active">
-                <div class="img-box"><img src="{% static 'img/patient1.jpg' %}" alt=""></div>
-                <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
-                <p class="overview">Michael Holz</p>
-            </div>
-            <div class="carousel-item">
-                <div class="img-box"><img src="{% static 'img/patient2.jpg' %}" alt=""></div>
-                <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Vestibulum idac nisl bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
-                <p class="overview">Antonio Moreno</p>
-            </div>
-            <div class="carousel-item">
-                <div class="img-box"><img src="{% static 'img/patient3.jpg' %}" alt=""></div>
-                <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit.</p>
-                <p class="overview">Paula Wilson</p>
-                
-            </div>		
-        </div>
+<section class="text-center container" id="reviews">
+  <h2>Satisfied Patients</h2>
+  <div class="owl-carousel owl-theme">
 
-    </div>
+ <div class="item">
+  <div class="img-box"><img src="{% static 'img/patient1.jpg' %}" alt=""></div>
+  <p class="overview">Michael Holz</p>
+  <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
+</div>
 
+<div class="item">
+  <div class="img-box"><img src="{% static 'img/patient2.jpg' %}" alt=""></div>
+  <p class="overview">Antonio Moreno</p>
+  <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Vestibulum idac nisl bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>  
+</div>
+
+<div class="item">
+  <div class="img-box"><img src="{% static 'img/patient3.jpg' %}" alt=""></div>
+  <p class="overview">Paula Wilson</p>
+  <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit.</p>  
+</div>
+
+<div class="item">
+  <div class="img-box"><img src="{% static 'img/patient4.jpg' %}" alt=""></div>
+  <p class="overview">Laura Smith</p>
+  <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante eget nisl convallis tempus. Phasellus ante lectus, tincidunt tincidunt dui a, rhoncus interdum est. Sed molestie quis augue ac pulvinar. Pellentesque egoists sed tortor egestas pretium. Pellentesque commodo.</p>  
+</div>
+
+<div class="item">
+  <div class="img-box"><img src="{% static 'img/patient5.jpg' %}" alt=""></div>
+  <p class="overview">David Johnson</p>
+  <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit.</p>  
+</div>
+
+</div>
 </section>
-
 
 <section id="contact" class="card m-4 p-4">
     <div class="container">
